--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,45 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout code
       - uses: actions/checkout@v3
+
+      # 2. Setup Node.js
       - uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - run: npm install
+      # 3. Install dependencies
+      - run: npm ci
 
-      # Linting
+      # 4. Run lint
       - run: npm run lint
 
-      # TypeScript check
-      - run: npm run build --if-present
-
-      # Formatting
+      # 5. Run Prettier check
       - run: npm run format -- --check
 
+      # 6. Build Next.js (also checks TypeScript)
+      - run: npm run build
 
-      # # Optional: run tests if you add Jest/RTL
+      # # 7. Run tests 
       # - run: npm test || echo "No tests yet"
+
+      # 8. Deploy to Vercel
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v23
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          working-directory: ./
+          prod: true
