--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/drizzle-adapter": "^1.10.0",
     "@supabase/supabase-js": "^2.57.4",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.23",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "next": "15.5.3",
