--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-auth": "^1.3.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cohere-ai": "^7.19.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "dropdown-menu": "^0.1.1",
