--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.3.23",
     "class-variance-authority": "^0.7.1",
