--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "drizzle-orm": "^0.44.5",
     "dropdown-menu": "^0.1.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
