--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lucide-react": "^0.544.0",
     "next": "^16.0.1",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
@@ -56,12 +58,14 @@
     "shadcn": "^3.3.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.36.0",
+    "@swc/core": "^1.14.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
