--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
     "recharts": "^2.15.4",
     "shadcn": "^3.3.1",
