--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "^3.35.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
@@ -49,12 +50,12 @@
     "pdf-parse": "^2.4.5",
     "pdf2json": "^4.0.0",
     "pg": "^8.16.3",
-    "postcss": "^8.5.6",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
     "shadcn": "^3.3.1",
     "sonner": "^2.0.7",
@@ -73,6 +74,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.36.0",
     "eslint-config-next": "15.5.3",
@@ -81,8 +83,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
